Bug 249131 - Bad suggestions when a share is not found on a valid machine accessed by smb://
Summary: Bad suggestions when a share is not found on a valid machine accessed by smb://
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5.0
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-26 17:12 UTC by Richard Lemay
Modified: 2011-06-15 06:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Lemay 2010-08-26 17:12:26 UTC
Version:           4.5.0 (using KDE 4.5.0) 
OS:                Linux

When you enter an invalid share on a valid host accessed by smb://, konqueror displays this message :

====

Details of the Request:
URL: smb://coronya/downloads
Protocol: smb
Date and Time: 26 August 2010 11:00
Additional Information: smb://coronya/downloads

Description:
The specified file or folder /downloads does not exist.

Possible Causes:
You may have encountered a bug in the program.

Possible Solutions:
Update your software to the latest version. Your distribution should provide tools to update your software.
Contact your appropriate computer support system, whether the system administrator, or technical support group for further assistance.

====

I think this is not a good message to display since the cause can be entirely normal. In this case, I try to access smb://coronya/downloads. The host smb://coronya exists, but the share /downloads does not. This is not a software malfunction, but simply a user error.

The suggestions should be more neutral, like double-check the spelling or verify that this directory exist instead of being a little alarmist like you may have encountered a bug in the program.


Reproducible: Always

Steps to Reproduce:
Type
Example : smb://host/share
where host exists and share does not exists.

Actual Results:  
The message described in the details section is displayed.

Expected Results:  
The page should have told me to double-check the spelling or ensure that the share does exists.

OS: Linux (x86_64) release 2.6.32-24-generic
Compiler: cc
Comment 1 Dawit Alemayehu 2011-06-15 06:35:54 UTC
Git commit 6a388eae22bb0117018d886204b9b598c72c8c9a by Dawit Alemayehu.
Committed on 10/06/2011 at 22:54.
Pushed by adawit into branch 'master'.

Show proper error message message when a user attempts to access non-existent
files or directories.

BUG: 249131
FIXED-IN: 4.7.0

M  +2    -2    kio/kio/global.cpp     

http://commits.kde.org/kdelibs/6a388eae22bb0117018d886204b9b598c72c8c9a