Show proper error message message when a user attempts to access non-existent files or directories.

BUG: 249131
FIXED-IN: 4.7.0